# LookUp

./: .gitignore  CMakeLists.txt  LookUp_Implementation_Plan.md  package-lock.json  package.json
src/: D2DRenderer.cpp  D2DRenderer.h  DictionaryClient.cpp  DictionaryClient.h  MainWindow.cpp  MainWindow.h  PopupWindow.cpp  PopupWindow.h  index.html  main.cpp  main.js  popup.css  popup.html  popup.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  dictionary.rs  lib.rs  main.rs  ocr.rs  popup.rs
